# stow

./: Cargo.toml
src/: main.rs
